checkout/static/checkout/css/checkout.css
.summary-row,
.summary-header,
.form-check-label {
    font-size: 12px;
    margin-top: 5px;
}

.summary-header {
    font-weight: 400;
}

.order-summary {
    margin-top: 20px;
}

.checkout-image {
    width: 5vw;
}

#choochoo:hover {
    color: #ceca03;
}


/* Stripe Elements CSS from the Stripe Documentation and tweaked to match project */

#card-errors {
    color: #e64958;
    font-size: 12px;
    margin-bottom: 10px;
}

.StripeElement,
.stripe-style-input {
    background-color: #f0eee9;
    border: 1px solid transparent;
    border-radius: 4px;
    box-shadow: 0 1px 3px 0 #e6ebf1;
    box-sizing: border-box;
    height: 40px;
    margin-bottom: 10px;
    margin-top: 5px;
    padding: 10px;
    transition: box-shadow 150ms ease;
    -webkit-transition: box-shadow 150ms ease;
}

.StripeElement--focus,
.stripe-style-input:focus,
.stripe-style-input:active {
    border-color: #008763;
    box-shadow: 0 0 0 0.25rem rgb(0 135 99 / 25%);
}

.StripeElement--invalid {
    border-color: #e64757;
    box-shadow: 0 0 0 0.25rem rgb(230 73 88 / 25%);
}

.StripeElement--webkit-autofill {
    background-color: #f0eee9 !important;
}

.stripe-style-input::placeholder {
    color: #aab7c4;
}

/* Overlay while order is processing */

#order-progress {
	display: none;
	position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 135, 99, 0.9);
    z-index: 9999;
}

.order-spinner {
	display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    height: 100%;
}

